# vault

./: .clang-format  .gitignore  README.md  meson.build
.cache/clangd/index/: vault.c.6EB83AFC895CEA45.idx  vault.h.9732B36A17C9AF39.idx  vault.h.AFF1E32C03666E66.idx  vault_linux.c.C832ABB04079136C.idx  vault_windows.c.EEFB26BF1C753356.idx
examples/in-memory-vault/: Makefile  main.c
examples/read-vault/: Makefile  main.c
examples/save-vault/: Makefile  main.c
include/: vault.h
source/: vault.c  vault_entry.c  vault_entry.h
source/platform/linux/: vault_linux.c
